tests/lean/local_notation_bug.lean.expected.out
f a b : A
f a b : A
expr ↣ _Fun : expr.app
string ↣ name : mk_simple_name
nat ↣ bool : foo
expr ↣ [fun-class] : expr.app
expr ↣ _Fun : expr.app
string ↣ name : mk_simple_name
expr ↣ [fun-class] : expr.app
10 : ?M_1
local_notation_bug.lean:22:10: error: invalid expression
expr ↣ _Fun : expr.app
string ↣ name : mk_simple_name
expr ↣ [fun-class] : expr.app
